new text changes on pop-ups

--- a/quiz.css
+++ b/quiz.css
@@ -185,6 +185,7 @@ html, body {
 .sweet-alert {
       margin-top: -251px !important;
       position: absolute;
+      background-image: inherit;
   }
 
 
